--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2018"
 reqwest = "0.9"
 select = "0.4"
 failure = "0.1.5"
+actix-web = "0.7.19"
+serde = { version = "1.0", features = ["derive"] }
